--- a/App Backend/package.json
+++ b/App Backend/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "db:migrate": "(cd database && npx sequelize-cli db:migrate)",
+    "db:migrate:undo": "(cd database && npx sequelize-cli db:migrate:undo)",
+    "db:seed": "(cd database && npx sequelize-cli db:seed)",
+    "db:create": "(cd database && npx sequelize-cli db:create)"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,9 +16,11 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.0"
   }
 }
