--- a/App Backend/package.json
+++ b/App Backend/package.json
@@ -10,9 +10,9 @@
     "db:seed": "(cd database && npx sequelize-cli db:seed)",
     "db:create": "(cd database && npx sequelize-cli db:create)"
   },
- 
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
