--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "cors": "^2.8.5",
     "v-calendar": "^3.0.1",
     "vue2-daterange-picker": "^0.6.8"
   }
