--- a/App Backend/package.json
+++ b/App Backend/package.json
@@ -5,17 +5,20 @@
   "scripts": {
     "dev": "nodemon ./bin/www",
     "start": "node ./bin/www",
-    "db:migrate": "(cd database && npx sequelize-cli db:migrate)",
-    "db:migrate:undo": "(cd database && npx sequelize-cli db:migrate:undo)",
-    "db:seed": "(cd database && npx sequelize-cli db:seed)",
-    "db:create": "(cd database && npx sequelize-cli db:create)"
+    "db:migrate": "cd database && npx sequelize-cli db:migrate && cd ..",
+    "db:migrate:undo": "cd database && npx sequelize db:migrate:undo & cd ..",
+    "db:seed": "cd database && npx sequelize db:seed && cd ..",
+    "db:create": "cd database && npx sequelize db:create && cd .."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
