--- a/App Frontend/package.json
+++ b/App Frontend/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
@@ -29,9 +30,9 @@
     "jsdom": "^20.0.3",
     "prettier": "^2.7.1",
     "rollup-plugin-rewrite-imports": "^2.0.0",
+    "sass": "^1.32.11",
     "start-server-and-test": "^1.15.2",
     "vite": "^4.0.0",
-    "sass": "^1.32.11",
     "vite-plugin-sass-dts": "^1.3.2",
     "vitest": "^0.25.6"
   }
