--- a/App Frontend/package.json
+++ b/App Frontend/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vue2-daterange-picker": "^0.6.8"
+    "vue2-daterange-picker": "^0.6.8",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
